<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/watingRoom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_connexion"
    tools:context=".WatingRoom">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/astronaute" />

    <Button
        android:id="@+id/joinRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="@string/joinRoomButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.3" />

    <RadioButton
        android:id="@+id/radioButtonSocket1"
        android:layout_width="140dp"
        android:layout_height="23dp"
        android:checked="false"
        android:clickable="false"
        android:text="@string/SocketDisconnected"
        android:textAlignment="viewStart"
        android:textColorHighlight="#4CAF50"
        android:textColorHint="#4CAF50"
        android:textColorLink="#4CAF50"
        android:textSize="@dimen/MinTxtSize"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/roomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="@string/roomName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinRoomButton"
        app:layout_constraintVertical_bias="0.01999998" />

</android.support.constraint.ConstraintLayout>