<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="room"
            type="com.android.example.spaceteam.Room" />
    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fond_connexion"
        tools:context=".WatingRoom2">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/astronaute" />

        <TextView
            android:id="@+id/roomName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="272dp"
            android:fontFamily="@font/audiowide"
            android:text="@={room.name}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joinRoomButton"
            app:layout_constraintVertical_bias="0.01999998" />

        <RadioButton
            android:id="@+id/radioButtonSocket2"
            android:layout_width="140dp"
            android:layout_height="23dp"
            android:checked="true"
            android:clickable="false"
            android:text="@string/SocketConnected"
            android:textAlignment="viewStart"
            android:textColorHighlight="#4CAF50"
            android:textColorHint="#4CAF50"
            android:textColorLink="#4CAF50"
            android:textSize="@dimen/MinTxtSize"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.13" />

        <ToggleButton
            android:id="@+id/ready_button"
            android:layout_width="154dp"
            android:layout_height="47dp"
            android:backgroundTint="@color/red"
            android:checked="false"
            android:fontFamily="@font/audiowide"
            android:textOff="@string/notReady"
            android:textOn="@string/ready"
            app:layout_constraintBottom_toTopOf="@+id/roomName2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/playersList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomName2" />

    </android.support.constraint.ConstraintLayout>
</layout>